--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,10 @@
 :root {
   --primary-color: #2c3e50;
   --secondary-color: #225de6;
-  --bg-image: url("https://images.unsplash.com/photo-1611204112769-3871e7b284d7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80");
 }
 
 body {
-  background-image: var(--bg-image);
+  background-color: rgba(red, green, blue, alpha);
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -34,7 +33,7 @@ button:hover {
 }
 
 p {
-  font-size: 18px;
+  font-size: 12px;
   color: var(--primary-color);
   margin: 20px;
   padding: 10px;
