--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #2c3e50;
-  --secondary-color: #225de6;
-  --bg-image: url("https://images.unsplash.com/photo-1611204112769-3871e7b284d7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80");
+  --primary-color: #000000;
+  --secondary-color: #6eb5ff;
+  --bg-image: url(https://dev.to/kiranrajvjd/the-ultimate-css-background-pattern-resource-20m8);
 }
 
 body {
@@ -11,56 +11,66 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
 }
 
 h1 {
-  color: var(--primary-color);
+  font-size: 4rem;
+  color: var(--secondary-color);
   text-align: center;
   margin-top: 50px;
 }
 
 button {
   background-color: var(--primary-color);
-  color: white;
+  color: #fff;
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 button:hover {
   background-color: var(--secondary-color);
+  transform: translateY(-3px);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 p {
-  font-size: 18px;
-  color: var(--primary-color);
-  margin: 20px;
-  padding: 10px;
-  border: 1px solid var(--primary-color);
+  font-size: 2rem;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+  padding: 2rem;
   border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 input[type="text"] {
-  padding: 10px;
+  padding: 1rem;
   border: none;
   border-radius: 5px;
-  margin-right: 10px;
-  font-size: 16px;
+  margin-right: 1rem;
+  font-size: 1.8rem;
 }
 
 button.add {
   background-color: var(--primary-color);
-  color: white;
+  color: #fff;
   border: none;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 1rem 2rem;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 button.add:hover {
   background-color: var(--secondary-color);
+  transform: translateY(-3px);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 ul {
@@ -70,18 +80,18 @@ ul {
 }
 
 li {
-  font-size: 16px;
-  color: var(--primary-color);
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid var(--primary-color);
-  border-radius: 2px;
-  background-color: white;
+  font-size: 1.8rem;
+  color: #fff;
+  margin: 2rem 0;
+  padding: 2rem;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 li.blue-bg {
   background-color: var(--secondary-color);
-  color: white;
+  color: #fff;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-in-out;
 }
